--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <a class="logo" href="#home">Tanay Panchal</a>
 
       <nav class="nav" id="nav">
-        <a href="#home">About</a>
+        <a href="#home">Home</a>
         <a href="#skills">Skills</a>
         <a href="#projects">Projects</a>
         <a href="#contact">Contact</a>
@@ -227,4 +227,5 @@
     </div>
   </footer>
 </body>
+
 </html>
