Fix file paths for GitHub Pages
Updated file paths for resume and profile image to relative paths.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="#skills">Skills</a>
         <a href="#projects">Projects</a>
         <a href="#contact">Contact</a>
-        <a href="D:\Xampp\htdocs\Panchal Tanay U\TANAY__PANCHAL_Resume.pdf" target="_blank" rel="noopener noreferrer" download>Resume(PDF)</a>
+        <a href="TANAY__PANCHAL_Resume.pdf" target="_blank" rel="noopener noreferrer" download>Resume(PDF)</a>
       </nav>
 
       <button id="nav-toggle" aria-label="Toggle navigation" class="nav-toggle">
@@ -38,7 +38,7 @@
 
           <div class="hero-ctas">
             <a href="#projects" class="btn primary">View Projects</a>
-            <a href="D:\Xampp\htdocs\Panchal Tanay U\TANAY__PANCHAL_Resume.pdf" class="btn outline" target="_blank" rel="noopener noreferrer" download>Download Résumé</a>
+            <a href="TANAY__PANCHAL_Resume.pdf" class="btn outline" target="_blank" rel="noopener noreferrer" download>Download Résumé</a>
           </div>
 
           <div class="social-inline" aria-hidden="false">
@@ -49,7 +49,7 @@
         </div>
 
         <div class="hero-photo">
-          <img src="D:\Xampp\htdocs\Panchal Tanay U\images\profile.jpg" alt="Tanay Panchal — profile photo" />
+          <img src="images/profile.jpg" alt="Tanay Panchal — profile photo" />
           <div class="photo-frame" aria-hidden="true"></div>
         </div>
       </div>
@@ -213,7 +213,7 @@
             </div>
 
             <div class="resume-small"><br>
-              <a href="D:\Xampp\htdocs\Panchal Tanay U\TANAY__PANCHAL_Resume.pdf" class="btn outline" target="_blank" rel="noopener noreferrer" download>Download Résumé</a>
+              <a href="TANAY__PANCHAL_Resume.pdf" class="btn outline" target="_blank" rel="noopener noreferrer" download>Download Résumé</a>
             </div>
           </aside>
         </div>
@@ -227,5 +227,4 @@
     </div>
   </footer>
 </body>
-
 </html>
